--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://agastya7199.github.io/tic-tac-toe_ReactJS",
     "name": "react-essentials-deep-dive-adv",
     "private": true,
     "version": "0.0.0",
@@ -25,6 +26,5 @@
         "eslint-plugin-react-refresh": "^0.4.3",
         "gh-pages": "^6.3.0",
         "vite": "^4.4.5"
-    },
-    "homepage": "https://agastya7199.github.io/tic-tac-toe_ReactJS"
+    }
 }
