--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "homepage": "https://agastya7199.github.io/tic-tac-toe_ReactJS",
     "name": "react-essentials-deep-dive-adv",
+    "homepage": "https://agastya7199.github.io/tic-tac-toe_ReactJS",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -10,7 +10,7 @@
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "react": "^19.0.0",
@@ -25,6 +25,6 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "gh-pages": "^6.3.0",
-        "vite": "^4.4.5"
+        "vite": "^6.3.5"
     }
 }
